--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                         Subjects
                     </h2>
                 </div>
-                <div class="songlist">
+                <div class="subjectlist">
                     <ul>
-
+                        
                     </ul>
                 </div>
                 <div class="footer">
@@ -61,7 +61,7 @@
                 <div class="cardcontainer">
                     <div data-folder="maths" class="card">
                         <img src="" alt="">
-                        <h2>Maths</h2>
+                        <h2 class="sub">Maths</h2>
                         <p>chapters</p>
                     </div>
                 </div>
