--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>Study material by JAY</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/Utilites.css">
+    <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
 </head>
 
 <body>
