--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>Spotify - Web Player: Music for everyone</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/Utilites.css">
+    <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -32,7 +33,7 @@
                 </div>
                 <div class="subjectlist">
                     <ul>
-                        
+
                     </ul>
                 </div>
                 <div class="footer">
@@ -60,14 +61,22 @@
                 <h1>Study Material</h1>
                 <div class="cardcontainer">
                     <div data-folder="maths" class="card">
-                        <img src="" alt="">
-                        <h2 class="sub">Maths</h2>
-                        <p>chapters</p>
+                        <img src="./img/pdf.png" alt="">
+                        <div>
+                            <h2 class="sub">Maths</h2>
+                            <p>chapters</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
         <script src="js/script2.js"></script>
+        <div class="loadingbar">
+            <div class="blur"></div>
+            <div class="load">
+                <div class="loading"><div></div></div>
+            </div>
+        </div>
 </body>
 
 </html>
